deployments/overlays/testing/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aether-testing
  labels:
    name: aether-testing
    environment: testing
